# instrumentos-portugueses

./: .dockerignore  .env.example  .gitignore  ADR.md  DEPLOY_GPU.md  LICENSE  Makefile  README.md  dvc.yaml  pyproject.toml
.github/workflows/: deploy-slides.yml
configs/: dataset.yaml  instruments.yaml  queries.yaml  queries_mini.yaml  servers.yaml
configs/experiments/: exp_b1_valid.yaml  exp_b3_valid.yaml  exp_b4_test.yaml  exp_b5_test.yaml
configs/models/: b1_jinaclip.yaml  b1_openclip.yaml  b1_openclip_vitl14.yaml  b3_colqwen.yaml  b4_vlm_rerank.yaml  b5_agentic.yaml
docker/: Dockerfile.gpu  docker-compose.gpu.yml  entrypoint.sh
notebooks/: 01_dataset_exploration.ipynb  02_error_analysis.ipynb
outputs/candidates/: B5_full_mini.parquet  B5_mock_valid.parquet  B5_nocrops_mini.parquet
outputs/metrics/: B1_mini.json  B1_openclip-vitb32_valid.json  B1_openclip-vitb32_valid__rerankmetrics.json  B4_mini.json  B4_mini__rerankmetrics.json  B5_nocrops_mini.json
outputs/night/: DONE  QA_NOTES.md
schemas/: agent_trace.schema.json  vlm_rerank.schema.json
scripts/: benchmark_query_latency.py  build_slide_figures.py  check_gpu.sh  compute_significance.py  download_models.sh  gpu_full.sh  gpu_qwen36_zero_shot.sh  gpu_smoke.sh  monitor_remote.py  night_run.py  notify.sh  pod_bootstrap.sh  pod_logpush.py  qwen36_top100_resume.py  run_all_test.sh  run_all_valid.sh  runpod.py  save_results.sh  shutdown_pod.sh  watchdog.py
tests/: conftest.py  test_agent_b5.py  test_coco_parser.py  test_eval_advanced.py  test_late_interaction.py  test_no_filename_leakage.py  test_qrels.py  test_reporting.py  test_runfile_format.py  test_serving.py  test_vlm_rerank.py
(+166 files in other folders)
